; ModuleID = '/home/carl/AnghaBench/linux/samples/bpf/extr_xdp_monitor_user.c_swap.c'
source_filename = "/home/carl/AnghaBench/linux/samples/bpf/extr_xdp_monitor_user.c_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stats_record = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stats_record**, %struct.stats_record**)* @swap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @swap(%struct.stats_record** %0, %struct.stats_record** %1) #0 {
  %3 = alloca %struct.stats_record**, align 8
  %4 = alloca %struct.stats_record**, align 8
  %5 = alloca %struct.stats_record*, align 8
  store %struct.stats_record** %0, %struct.stats_record*** %3, align 8
  store %struct.stats_record** %1, %struct.stats_record*** %4, align 8
  %6 = load %struct.stats_record**, %struct.stats_record*** %3, align 8
  %7 = load %struct.stats_record*, %struct.stats_record** %6, align 8
  store %struct.stats_record* %7, %struct.stats_record** %5, align 8
  %8 = load %struct.stats_record**, %struct.stats_record*** %4, align 8
  %9 = load %struct.stats_record*, %struct.stats_record** %8, align 8
  %10 = load %struct.stats_record**, %struct.stats_record*** %3, align 8
  store %struct.stats_record* %9, %struct.stats_record** %10, align 8
  %11 = load %struct.stats_record*, %struct.stats_record** %5, align 8
  %12 = load %struct.stats_record**, %struct.stats_record*** %4, align 8
  store %struct.stats_record* %11, %struct.stats_record** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
